k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-sample-service
  labels:
    app: node-sample-app
spec:
  selector:
    app: node-sample-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
