k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: node-sample-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hello.local`)
      kind: Rule
      services:
        - name: node-sample-service
          port: 80
